# Car/api/handler/customer.go
@@ -1,17 +1,60 @@
 package handler
 
 import (
-	"context"
 	"fmt"
 	"net/http"
 	_ "rent-car/api/docs"
 	"rent-car/api/models"
 	"rent-car/pkg/check"
-
+	"rent-car/pkg/hash"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 	"golang.org/x/crypto/bcrypt"
 )
+
+// Login godoc
+// @Router 		/customer/login [PUT]
+// @Summary 	login
+// @Description This api is used for logining
+// @Tags 		customer
+// @Accept		json
+// @Produce		json
+// @Param		customer body  models.Login true "login"
+// @Success		200  {object}  models.Login
+// @Failure		400  {object}  models.Response
+// @Failure		404  {object}  models.Response
+// @Failure		500  {object}  models.Response
+func (h Handler) Login(c *gin.Context) {
+	login := models.Login{}
+
+	if err := c.ShouldBindJSON(&login); err != nil {
+		handleResponseLog(c, h.Log, "error while decoding request body", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if err := check.ValidatePhoneNumber(login.Phone); err != nil {
+		handleResponseLog(c, h.Log, "error while validating phoneNumber", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if err := check.IsValidPassword(login.Password); err != nil {
+		handleResponseLog(c, h.Log, "error while validating password", http.StatusBadRequest, err.Error())
+	}
+
+	password, err := h.Services.Customer().GetPassword(c.Request.Context(), login.Phone)
+	if err != nil {
+		handleResponseLog(c, h.Log, "error while Login Customer", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	err1 := hash.CompareHashAndPassword(password, login.Password)
+	if err1 != nil {
+		handleResponseLog(c, h.Log, "Wrong Password", http.StatusBadRequest, err1.Error())
+		return
+	}
+
+	handleResponseLog(c, h.Log, "Login successfully", http.StatusOK, password)
+}
 
 // @Security ApiKeyAuth
 // CreateCustomer godoc
@@ -34,7 +77,7 @@ func (h Handler) CreateCustomer(c *gin.Context) {
 		return
 	}
 
-	if err := check.ValidateGmailAddress(customer.Gmail); err != nil {
+	if err := check.ValidateEmailAddress(customer.Gmail); err != nil {
 		handleResponseLog(c, h.Log, "error while validating email address", http.StatusBadRequest, err.Error())
 		return
 	}
@@ -53,7 +96,7 @@ func (h Handler) CreateCustomer(c *gin.Context) {
 	), bcrypt.DefaultCost)
 
 	customer.Password = string(hashedpass)
-	id, err := h.Services.Customer().Create(context.Background(),customer)
+	id, err := h.Services.Customer().Create(c.Request.Context(), customer)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while creating customer", http.StatusInternalServerError, err.Error())
 		return
@@ -65,7 +108,7 @@ func (h Handler) CreateCustomer(c *gin.Context) {
 // ChangeCustomerPassword godoc
 // @Router                /customer/{phone} [PATCH]
 // @Summary 			  change customer password
-// @Description:          this api changes customer password 
+// @Description:          this api changes customer password
 // @Tags 			      customer
 // @Accept 			      json
 // @Produce 		      json
@@ -99,7 +142,7 @@ func (h Handler) ChangePassword(c *gin.Context) {
 
 	customer.Password = string(hashedpass)
 
-	id, err := h.Services.Customer().ChangePassword(context.Background(), customer)
+	id, err := h.Services.Customer().ChangePassword(c.Request.Context(), customer)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while creating customer", http.StatusInternalServerError, err.Error())
 		return
@@ -133,7 +176,7 @@ func (h Handler) UpdateCustomer(c *gin.Context) {
 		handleResponseLog(c, h.Log, "error while validating", http.StatusBadRequest, err.Error())
 		return
 	}
-	id, err := h.Services.Customer().Update(context.Background(), customer)
+	id, err := h.Services.Customer().Update(c.Request.Context(), customer)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while updating customer", http.StatusInternalServerError, err.Error())
 		return
@@ -160,7 +203,7 @@ func (h Handler) GetAllCustomer(c *gin.Context) {
 	var (
 		request = models.GetAllCustomersRequest{}
 	)
-	
+
 	request.Search = c.Query("search")
 
 	page, err := ParsePageQueryParam(c)
@@ -180,7 +223,7 @@ func (h Handler) GetAllCustomer(c *gin.Context) {
 	request.Page = page
 	request.Limit = limit
 
-	customers, err := h.Services.Customer().GetAll(context.Background(), request)
+	customers, err := h.Services.Customer().GetAll(c.Request.Context(), request)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while getting customers,", http.StatusInternalServerError, err.Error())
 		return
@@ -205,7 +248,7 @@ func (h Handler) GetByIDCustomer(c *gin.Context) {
 	id := c.Param("id")
 	fmt.Println("id", id)
 
-	customer, err := h.Services.Customer().GetByID(context.Background(), id)
+	customer, err := h.Services.Customer().GetByID(c.Request.Context(), id)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while getting customer by id", http.StatusInternalServerError, err.Error())
 		return
@@ -235,7 +278,7 @@ func (h Handler) DeleteCustomer(c *gin.Context) {
 		handleResponseLog(c, h.Log, "error while validating id", http.StatusBadRequest, err.Error())
 		return
 	}
-	err = h.Services.Customer().Delete(context.Background(), id)
+	err = h.Services.Customer().Delete(c.Request.Context(), id)
 	if err != nil {
 		handleResponseLog(c, h.Log, "Error while deleting customer", http.StatusInternalServerError, err.Error())
 		return
@@ -243,7 +286,7 @@ func (h Handler) DeleteCustomer(c *gin.Context) {
 	handleResponseLog(c, h.Log, "Deleted successfully", http.StatusOK, id)
 }
 
-func (h Handler) GetCustomerCars(c *gin.Context)  {
+func (h Handler) GetCustomerCars(c *gin.Context) {
 	var (
 		request = models.GetAllCustomersRequest{}
 	)
@@ -266,7 +309,7 @@ func (h Handler) GetCustomerCars(c *gin.Context)  {
 	request.Page = page
 	request.Limit = limit
 
-	customers, err := h.Services.Customer().GetCustomerCars(context.Background(), request)
+	customers, err := h.Services.Customer().GetCustomerCars(c.Request.Context(), request)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while getting customers", http.StatusInternalServerError, err.Error())
 		return
@@ -278,7 +321,7 @@ func (h Handler) GetCustomerCars(c *gin.Context)  {
 func (h Handler) GetByIDCustomeCarr(c *gin.Context) {
 	id := c.Param("id")
 
-	customer, err := h.Services.Customer().GetByIDCustomerCar(context.Background(), id)
+	customer, err := h.Services.Customer().GetByIDCustomerCar(c.Request.Context(), id)
 	if err != nil {
 		handleResponseLog(c, h.Log, "error while getting customerCar by id", http.StatusInternalServerError, err.Error())
 		return
@@ -289,7 +332,7 @@ func (h Handler) GetByIDCustomeCarr(c *gin.Context) {
 // func (h Handler) GetCustomerCarss(c *gin.Context){
 // 	id := c.Param("id")
 
-// 	customer, err := h.Services.Customer().GetCustomerCarss(context.Background(), id)
+// 	customer, err := h.Services.Customer().GetCustomerCarss(c.Request.Context(), id)
 // 	if err != nil {
 // 		handleResponseLog(c, h.Log, "error while getting customerCar by id", http.StatusInternalServerError, err.Error())
 // 		return
